src/objects/Reported_Metric_Value__c.object
<CustomObject>
    <description>The object represents the actual reported value of a metric object for use in a company wide report</description>
    <fields>
        <fullName>Company_Wide_Report__c</fullName>
        <label>Company Wide Report</label>
        <referenceTo>Company_Wide_Report__c</referenceTo>
        <relationshipLabel>Reported Metric Values</relationshipLabel>
        <relationshipName>Reported_Metric_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delta__c</fullName>
        <label>Delta</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headcount__c</fullName>
        <label>Headcount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Metric</label>
        <referenceTo>Metric__c</referenceTo>
        <relationshipLabel>Reported Metric Values</relationshipLabel>
        <relationshipName>Reported_Metric_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_To_Date__c</fullName>
        <label>Month To Date</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reported_Value__c</fullName>
        <label>Reported Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_To_Date__c</fullName>
        <label>Week To Date</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_To_Date__c</fullName>
        <label>Year To Date</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Reported Metric Value</label>
    <nameField>
        <displayFormat>RMV-{0000000}</displayFormat>
        <label>Reported Metric Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reported Metric Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>